# rocketmancer

./: .env.example  .eslintignore  .gitignore  .release-please-config.json  .release-please-manifest.json  CHANGELOG.md  Makefile  README.md  docker-compose.yml  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: ci.yml  deploy.yml  docker-build.yml  pr-checks.yml  release-please.yml
.hooks/: pre-commit
backend/: .dockerignore  CHANGELOG.md  Dockerfile  README.md  manage.py  pyproject.toml
backend/optimizer/: apps.py  rocket.py  stage.py  views.py
backend/requirements/: base.txt  development.txt  production.txt  testing.txt
backend/rocketmancer/: asgi.py  urls.py  wsgi.py
backend/rocketmancer/settings/: __init__.py  base.py  development.py  production.py  testing.py
backend/rocketmancer_backend/: asgi.py  urls.py  wsgi.py
backend/rocketmancer_backend/settings/: base.py  development.py
backend/tests/: test_api.py  test_basic.py  test_rocket_optimization.py
docs/: README.md  versioning.md
docs/api/: README.md  error-handling.md  rocket-optimization.md
docs/architecture/: README.md  component-interactions.md  data-flow.md  system-overview.md
docs/deployment/: README.md  cloud.md  docker.md  environment.md  production.md
docs/development/: getting-started.md
docs/user-guide/: README.md
frontend/: .dockerignore  .env.example  .prettierignore  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js  vitest.config.js
frontend/src/: App.jsx  Footer.jsx  main.jsx  solver.js
frontend/src/components/: DisplayProperty.jsx  Footer.jsx  Parameters.jsx  Results.jsx  Rocket.jsx  Title.jsx
frontend/src/components/Parameters/: Parameters.jsx  ParametersStage.jsx
frontend/src/constants/: rocketDefaults.js
frontend/src/hooks/: useFormValidation.js  useRocketOptimization.js
frontend/src/services/: api.js  rocketService.js
frontend/src/styles/: App.css  DisplayProperty.css  Footer.css  Input.css  Parameters.css  Rocket.css  Title.css  index.css
frontend/src/tests/: App.test.jsx  setup.js
frontend/src/utils/: formatters.js  validation.js
nginx/: rocketmancer.conf
public/: CNAME
scripts/: sync-version.sh
src/: App.jsx  main.cpp  palette.js  solver.js  solver.test.js  three_stage_rocketmancer.cpp  two_stage_rocketmancer.cpp
src/components/: Footer.jsx  FormattedInput.jsx  Header.jsx  Parameters.jsx  Results.jsx  Settings.jsx  StagesInput.jsx
src/styles/: index.css
src/tests/: App.test.jsx
