[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rocketmancer-web"
version = "1.0.0"
description = "Multi-stage rocket delta-V optimizer web application"
readme = "../README.md"
license = {file = "../LICENSE"}
authors = [
    {name = "Rocketmancer Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Astronomy",
]
requires-python = ">=3.11"
dependencies = [
    "Django>=5.1.0",
    "djangorestframework>=3.15.0",
    "django-cors-headers>=4.4.0",
    "numpy>=2.1.0",
    "scipy>=1.14.0",
    "gunicorn>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.9.0",
    "flake8>=6.1.0",
    "isort>=5.12.0",
    "pytest>=7.4.0",
    "pytest-django>=4.5.0",
    "pytest-cov>=4.1.0",
    "factory-boy>=3.3.0",
    "django-debug-toolbar>=4.2.0",
    "django-extensions>=3.2.0",
]
prod = [
    "psycopg2-binary>=2.9.0",
    "redis>=5.0.0",
    "django-redis>=5.3.0",
    "sentry-sdk[django]>=1.32.0",
    "django-ratelimit>=4.1.0",
]

[project.urls]
Homepage = "https://github.com/your-username/rocketmancer-web"
Repository = "https://github.com/your-username/rocketmancer-web"
Documentation = "https://github.com/your-username/rocketmancer-web/docs"
"Bug Tracker" = "https://github.com/your-username/rocketmancer-web/issues"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | migrations
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_django = "django"
sections = ["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "migrations",
    ".venv",
    "build",
    "dist"
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "rocketmancer.settings.testing"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = [
    "--verbose",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = "."
omit = [
    "*/migrations/*",
    "*/venv/*",
    "*/tests/*",
    "manage.py",
    "*/settings/*",
    "*/__pycache__/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]