[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rocketmancer", "optimizer"]

[project]
name = "rocketmancer-backend"
version = "0.1.3"
description = "Multi-stage rocket delta-V optimizer web application"
readme = "../README.md"
license = {file = "../LICENSE"}
authors = [
    {name = "Bruh Lemma Yadecha"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.13.5"
dependencies = [
    "Django>=5.1.0",
    "djangorestframework>=3.15.0",
    "django-cors-headers>=4.4.0",
    "numpy>=2.1.0",
    "scipy>=1.14.0",
    "gunicorn>=23.0.0",
    "rocketmancer>=0.1.1",
]

[tool.uv.sources]
"rocketmancer" = { path = "../packages/rocketmancer" }

[project.optional-dependencies]
dev = [
    "ruff==0.12.5",
    "mypy>=1.11.0",
    "pytest>=7.4.0",
    "pytest-django>=4.5.0",
    "pytest-cov>=4.1.0",
    "factory-boy>=3.3.0",
    "django-debug-toolbar>=4.2.0",
    "django-extensions>=3.2.0",
    "django-stubs>=5.1.0",
    "types-requests>=2.31.0",
]
prod = [
    "psycopg2-binary>=2.9.0",
    "redis>=5.0.0",
    "django-redis>=5.3.0",
    "sentry-sdk[django]>=1.32.0",
    "django-ratelimit>=4.1.0",
]

[project.urls]
Homepage = "https://github.com/your-username/rocketmancer-web"
Repository = "https://github.com/your-username/rocketmancer-web"
Documentation = "https://github.com/your-username/rocketmancer-web/docs"
"Bug Tracker" = "https://github.com/your-username/rocketmancer-web/issues"

# Remove invalid scripts section - Django management commands should be run directly

[tool.uv]
dev-dependencies = [
    "ruff==0.12.5",
    "mypy>=1.11.0",
    "pytest>=7.4.0",
    "pytest-django>=4.5.0",
    "pytest-cov>=4.1.0",
    "factory-boy>=3.3.0",
    "django-debug-toolbar>=4.2.0",
    "django-extensions>=3.2.0",
    "django-stubs>=5.1.0",
    "types-requests>=2.31.0",
]

# Ruff configuration - replaces black, isort, and flake8
[tool.ruff]
target-version = "py313"
line-length = 88
extend-exclude = [
    "migrations",
    ".venv",
    "build",
    "dist",
    "__pycache__",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "DJ",  # flake8-django
    "UP",  # pyupgrade
    "RUF", # ruff-specific rules
]
ignore = [
    "E203", # whitespace before ':'
    "E501", # line too long (handled by formatter)
    "B008", # do not perform function calls in argument defaults
    "DJ001", # avoid using null=True on string-based fields
]

[tool.ruff.lint.per-file-ignores]
"*/settings/*.py" = ["F403", "F405"]  # Allow star imports in Django settings
"*/settings/__init__.py" = ["F403", "F405"]  # Allow star imports in Django settings

[tool.ruff.lint.isort]
known-third-party = ["django"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# MyPy configuration for strict type checking
[tool.mypy]
python_version = "3.13"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
no_implicit_reexport = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "*.migrations.*",
    "manage",
    "*/settings/*",
]
ignore_errors = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "rocketmancer_backend.settings.testing"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = [
    "--verbose",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["."]
omit = [
    "*/migrations/*",
    "*/venv/*",
    "*/tests/*",
    "manage.py",
    "*/settings/*",
    "*/__pycache__/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]
